Aggiunta DataGrid per i noleggi e la MenuBar

--- a/SistemaNoleggi_UWP/SistemaNoleggi_UWP.csproj
+++ b/SistemaNoleggi_UWP/SistemaNoleggi_UWP.csproj
@@ -153,6 +153,9 @@
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.12</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls.DataGrid">
+      <Version>7.1.2</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Noleggio_Library\Noleggio_Library.csproj">
