--- a/SistemaNoleggi_UWP/SistemaNoleggi_UWP.csproj
+++ b/SistemaNoleggi_UWP/SistemaNoleggi_UWP.csproj
@@ -116,6 +116,9 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="AddAutomobilePage.xaml.cs">
+      <DependentUpon>AddAutomobilePage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="AddClientePage.xaml.cs">
       <DependentUpon>AddClientePage.xaml</DependentUpon>
     </Compile>
@@ -147,6 +150,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="AddAutomobilePage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="AddClientePage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
