--- a/Noleggio_Library/Noleggio_Library.csproj
+++ b/Noleggio_Library/Noleggio_Library.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="3.1.0" />
+  </ItemGroup>
+
 </Project>
