Implementata la possibilitá per l'utente se scegliere di sincronizzare i file su database

--- a/SistemaNoleggi_UWP/SistemaNoleggi_UWP.csproj
+++ b/SistemaNoleggi_UWP/SistemaNoleggi_UWP.csproj
@@ -135,6 +135,9 @@
       <DependentUpon>ClientiPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Client\SistemaNoleggiClient.cs" />
+    <Compile Include="OptionPage.xaml.cs">
+      <DependentUpon>OptionPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="PercorsiPage.xaml.cs">
       <DependentUpon>PercorsiPage.xaml</DependentUpon>
     </Compile>
@@ -147,6 +150,7 @@
       <DependentUpon>NoleggiPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SaveMode.cs" />
     <Compile Include="VeicoliPage.xaml.cs">
       <DependentUpon>VeicoliPage.xaml</DependentUpon>
     </Compile>
@@ -196,6 +200,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="NoleggiPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="OptionPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
